tests/ui/traits/copy-impl-cannot-normalize.stderr
error[E0277]: the trait bound `T: TraitFoo` is not satisfied
  --> $DIR/copy-impl-cannot-normalize.rs:22:18
   |
LL | impl<T> Copy for Foo<T> {}
   |                  ^^^^^^ the trait `TraitFoo` is not implemented for `T`
   |
note: required by a bound in `Foo`
  --> $DIR/copy-impl-cannot-normalize.rs:7:8
   |
LL | struct Foo<T>
   |        --- required by a bound in this struct
LL | where
LL |     T: TraitFoo,
   |        ^^^^^^^^ required by this bound in `Foo`
help: consider restricting type parameter `T`
   |
LL | impl<T: TraitFoo> Copy for Foo<T> {}
   |       ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
